// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmountInputDemo Component JSON 1`] = `
.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  visibility: hidden;
  padding-right: 1.2rem;
}

.c13 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  visibility: visible;
  padding-right: 1.2rem;
}

.c6 {
  display: none;
}

.c7 {
  position: absolute;
  border-radius: 4px;
  box-sizing: border-box;
  left: -9999px;
  top: -9999px;
  z-index: undefined;
}

.c8 {
  position: relative;
  padding-bottom: 0.4rem;
  background: transparent;
  box-shadow: none;
}

.c9 {
  position: relative;
  box-sizing: border-box;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
  padding-left: 0.8rem;
  padding-right: 0.8rem;
}

.c10 {
  border-color: transparent;
  position: absolute;
  border-style: solid;
  line-height: 1;
  left: 1rem;
  bottom: -0.3rem;
  border-top-color: #363B40;
  border-width: 0.5rem 0.5rem 0;
}

.c11 {
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  overflow: hidden;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  font-size: 1.2rem;
  color: #ffffff;
}

.c1 {
  display: inline-block;
  height: 100%;
  display: block;
}

.c4 {
  background-color: transparent;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  border: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: text;
}

.c4::-webkit-input-placeholder {
  color: #c2c5ce;
  font-size: 1.4rem;
}

.c4::-moz-placeholder {
  color: #c2c5ce;
  font-size: 1.4rem;
}

.c4:-ms-input-placeholder {
  color: #c2c5ce;
  font-size: 1.4rem;
}

.c4::placeholder {
  color: #c2c5ce;
  font-size: 1.4rem;
}

.c12 {
  background-color: transparent;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  border: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: text;
}

.c12::-webkit-input-placeholder {
  color: #c2c5ce;
  font-size: 1.2rem;
}

.c12::-moz-placeholder {
  color: #c2c5ce;
  font-size: 1.2rem;
}

.c12:-ms-input-placeholder {
  color: #c2c5ce;
  font-size: 1.2rem;
}

.c12::placeholder {
  color: #c2c5ce;
  font-size: 1.2rem;
}

.c2 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  min-width: 3rem;
  width: 100%;
  background-color: white;
}

.c3 {
  height: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #363B40;
  padding-top: 0rem;
  padding-bottom: 0rem;
  padding-left: 1.2rem;
  padding-right: 0rem;
}

.c0 {
  margin-left: 50px;
}

<div>
  <div
    className="c0"
  >
    <p>
      formatter AmountInput
    </p>
    <div
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderBottomColor": "#d0d3da",
            "borderBottomLeftRadius": "0.4rem",
            "borderBottomRightRadius": "0.4rem",
            "borderBottomStyle": "solid",
            "borderBottomWidth": "0.1rem",
            "borderLeftColor": "#d0d3da",
            "borderLeftStyle": "solid",
            "borderLeftWidth": "0.1rem",
            "borderRightColor": "#d0d3da",
            "borderRightStyle": "solid",
            "borderRightWidth": "0.1rem",
            "borderTopColor": "#d0d3da",
            "borderTopLeftRadius": "0.4rem",
            "borderTopRightRadius": "0.4rem",
            "borderTopStyle": "solid",
            "borderTopWidth": "0.1rem",
            "height": "3.2rem",
          }
        }
      >
        <span
          className="c3"
          style={
            Object {
              "fontSize": "1.4rem",
            }
          }
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c4"
          disabled={false}
          maxLength="16"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          placeholder="请填写金额"
          prefix={
            <ForwardRef(ResultForward)
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {
                    "size": "default",
                  },
                  "themeConfig": Object {
                    "__partName": "AmountInputPrefix",
                  },
                  "themeState": Object {
                    "disabled": false,
                  },
                }
              }
            >
              ¥
            </ForwardRef(ResultForward)>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "borderBottomLeftRadius": "0.4rem",
              "borderBottomRightRadius": "0.4rem",
              "borderTopLeftRadius": "0.4rem",
              "borderTopRightRadius": "0.4rem",
              "color": "#363B40",
              "fontSize": "1.4rem",
              "paddingBottom": "0rem",
              "paddingLeft": "0.6rem",
              "paddingRight": "1.2rem",
              "paddingTop": "0rem",
            }
          }
          type="text"
          value=""
        />
        <i
          className="lugia-icon-reminder_close   c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#9EA4AE",
              "fontSize": "1.2rem",
            }
          }
        />
      </div>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
          style={Object {}}
        >
          <div
            className="c9"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "backgroundColor": "#363B40",
                "borderBottomLeftRadius": "0.2rem",
                "borderBottomRightRadius": "0.2rem",
                "borderTopLeftRadius": "0.2rem",
                "borderTopRightRadius": "0.2rem",
                "opacity": 0,
              }
            }
          >
            <div
              className="c10"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={Object {}}
            />
            <div
              className="c11"
              style={
                Object {
                  "color": "#ffffff",
                }
              }
            >
              <span
                className=""
                onClick={[Function]}
                style={Object {}}
              >
                
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <p>
      default AmountInput
    </p>
    <div
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderBottomColor": "#d0d3da",
            "borderBottomLeftRadius": "0.4rem",
            "borderBottomRightRadius": "0.4rem",
            "borderBottomStyle": "solid",
            "borderBottomWidth": "0.1rem",
            "borderLeftColor": "#d0d3da",
            "borderLeftStyle": "solid",
            "borderLeftWidth": "0.1rem",
            "borderRightColor": "#d0d3da",
            "borderRightStyle": "solid",
            "borderRightWidth": "0.1rem",
            "borderTopColor": "#d0d3da",
            "borderTopLeftRadius": "0.4rem",
            "borderTopRightRadius": "0.4rem",
            "borderTopStyle": "solid",
            "borderTopWidth": "0.1rem",
            "height": "3.2rem",
          }
        }
      >
        <span
          className="c3"
          style={
            Object {
              "fontSize": "1.4rem",
            }
          }
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c4"
          disabled={false}
          maxLength="16"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          placeholder="请填写金额"
          prefix={
            <ForwardRef(ResultForward)
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {
                    "size": "default",
                  },
                  "themeConfig": Object {
                    "__partName": "AmountInputPrefix",
                  },
                  "themeState": Object {
                    "disabled": false,
                  },
                }
              }
            >
              ¥
            </ForwardRef(ResultForward)>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "borderBottomLeftRadius": "0.4rem",
              "borderBottomRightRadius": "0.4rem",
              "borderTopLeftRadius": "0.4rem",
              "borderTopRightRadius": "0.4rem",
              "color": "#363B40",
              "fontSize": "1.4rem",
              "paddingBottom": "0rem",
              "paddingLeft": "0.6rem",
              "paddingRight": "1.2rem",
              "paddingTop": "0rem",
            }
          }
          type="text"
          value=""
        />
        <i
          className="lugia-icon-reminder_close   c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#9EA4AE",
              "fontSize": "1.2rem",
            }
          }
        />
      </div>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
          style={Object {}}
        >
          <div
            className="c9"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "backgroundColor": "#363B40",
                "borderBottomLeftRadius": "0.2rem",
                "borderBottomRightRadius": "0.2rem",
                "borderTopLeftRadius": "0.2rem",
                "borderTopRightRadius": "0.2rem",
                "opacity": 0,
              }
            }
          >
            <div
              className="c10"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={Object {}}
            />
            <div
              className="c11"
              style={
                Object {
                  "color": "#ffffff",
                }
              }
            >
              <span
                className=""
                onClick={[Function]}
                style={Object {}}
              >
                
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <p>
      禁用状态 
    </p>
    <div
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "backgroundColor": "#f4f5f8",
            "borderBottomColor": "#ebecf0",
            "borderBottomLeftRadius": "0.4rem",
            "borderBottomRightRadius": "0.4rem",
            "borderBottomStyle": "solid",
            "borderBottomWidth": "0.1rem",
            "borderLeftColor": "#ebecf0",
            "borderLeftStyle": "solid",
            "borderLeftWidth": "0.1rem",
            "borderRightColor": "#ebecf0",
            "borderRightStyle": "solid",
            "borderRightWidth": "0.1rem",
            "borderTopColor": "#ebecf0",
            "borderTopLeftRadius": "0.4rem",
            "borderTopRightRadius": "0.4rem",
            "borderTopStyle": "solid",
            "borderTopWidth": "0.1rem",
            "height": "3.2rem",
          }
        }
      >
        <span
          className="c3"
          style={
            Object {
              "color": "#d0d3da",
              "fontSize": "1.4rem",
            }
          }
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c4"
          disabled={true}
          maxLength="16"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          placeholder=""
          prefix={
            <ForwardRef(ResultForward)
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {
                    "size": "default",
                  },
                  "themeConfig": Object {
                    "__partName": "AmountInputPrefix",
                  },
                  "themeState": Object {
                    "disabled": true,
                  },
                }
              }
            >
              ¥
            </ForwardRef(ResultForward)>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "backgroundColor": "#f4f5f8",
              "borderBottomLeftRadius": "0.4rem",
              "borderBottomRightRadius": "0.4rem",
              "borderTopLeftRadius": "0.4rem",
              "borderTopRightRadius": "0.4rem",
              "color": "#d0d3da",
              "cursor": "not-allowed",
              "fontSize": "1.4rem",
              "paddingBottom": "0rem",
              "paddingLeft": "0.6rem",
              "paddingRight": "1.2rem",
              "paddingTop": "0rem",
            }
          }
          type="text"
          value=""
        />
        <i
          className="lugia-icon-reminder_close   c5"
          disabled={true}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#d0d3da",
              "cursor": "not-allowed",
              "fontSize": "1.2rem",
            }
          }
        />
      </div>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
          style={Object {}}
        >
          <div
            className="c9"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "backgroundColor": "#363B40",
                "borderBottomLeftRadius": "0.2rem",
                "borderBottomRightRadius": "0.2rem",
                "borderTopLeftRadius": "0.2rem",
                "borderTopRightRadius": "0.2rem",
                "opacity": 0,
              }
            }
          >
            <div
              className="c10"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={Object {}}
            />
            <div
              className="c11"
              style={
                Object {
                  "color": "#ffffff",
                }
              }
            >
              <span
                className=""
                onClick={[Function]}
                style={Object {}}
              >
                
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <p>
      small size
    </p>
    <div
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderBottomColor": "#d0d3da",
            "borderBottomLeftRadius": "0.4rem",
            "borderBottomRightRadius": "0.4rem",
            "borderBottomStyle": "solid",
            "borderBottomWidth": "0.1rem",
            "borderLeftColor": "#d0d3da",
            "borderLeftStyle": "solid",
            "borderLeftWidth": "0.1rem",
            "borderRightColor": "#d0d3da",
            "borderRightStyle": "solid",
            "borderRightWidth": "0.1rem",
            "borderTopColor": "#d0d3da",
            "borderTopLeftRadius": "0.4rem",
            "borderTopRightRadius": "0.4rem",
            "borderTopStyle": "solid",
            "borderTopWidth": "0.1rem",
            "height": "2.4rem",
          }
        }
      >
        <span
          className="c3"
          style={
            Object {
              "fontSize": "1.2rem",
            }
          }
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c12"
          disabled={false}
          maxLength="16"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          placeholder="请填写金额"
          prefix={
            <ForwardRef(ResultForward)
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {
                    "size": "small",
                  },
                  "themeConfig": Object {
                    "__partName": "AmountInputPrefix",
                  },
                  "themeState": Object {
                    "disabled": false,
                  },
                }
              }
            >
              ¥
            </ForwardRef(ResultForward)>
          }
          readOnly={false}
          size="small"
          style={
            Object {
              "borderBottomLeftRadius": "0.4rem",
              "borderBottomRightRadius": "0.4rem",
              "borderTopLeftRadius": "0.4rem",
              "borderTopRightRadius": "0.4rem",
              "color": "#363B40",
              "fontSize": "1.2rem",
              "paddingBottom": "0rem",
              "paddingLeft": "0.6rem",
              "paddingRight": "1.2rem",
              "paddingTop": "0rem",
            }
          }
          type="text"
          value=""
        />
        <i
          className="lugia-icon-reminder_close   c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#9EA4AE",
              "fontSize": "1.2rem",
            }
          }
        />
      </div>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
          style={Object {}}
        >
          <div
            className="c9"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "backgroundColor": "#363B40",
                "borderBottomLeftRadius": "0.2rem",
                "borderBottomRightRadius": "0.2rem",
                "borderTopLeftRadius": "0.2rem",
                "borderTopRightRadius": "0.2rem",
                "opacity": 0,
              }
            }
          >
            <div
              className="c10"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={Object {}}
            />
            <div
              className="c11"
              style={
                Object {
                  "color": "#ffffff",
                }
              }
            >
              <span
                className=""
                onClick={[Function]}
                style={Object {}}
              >
                
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <p>
      default size
    </p>
    <div
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderBottomColor": "#d0d3da",
            "borderBottomLeftRadius": "0.4rem",
            "borderBottomRightRadius": "0.4rem",
            "borderBottomStyle": "solid",
            "borderBottomWidth": "0.1rem",
            "borderLeftColor": "#d0d3da",
            "borderLeftStyle": "solid",
            "borderLeftWidth": "0.1rem",
            "borderRightColor": "#d0d3da",
            "borderRightStyle": "solid",
            "borderRightWidth": "0.1rem",
            "borderTopColor": "#d0d3da",
            "borderTopLeftRadius": "0.4rem",
            "borderTopRightRadius": "0.4rem",
            "borderTopStyle": "solid",
            "borderTopWidth": "0.1rem",
            "height": "3.2rem",
          }
        }
      >
        <span
          className="c3"
          style={
            Object {
              "fontSize": "1.4rem",
            }
          }
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c4"
          disabled={false}
          maxLength="16"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          placeholder="请填写金额"
          prefix={
            <ForwardRef(ResultForward)
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {
                    "size": "default",
                  },
                  "themeConfig": Object {
                    "__partName": "AmountInputPrefix",
                  },
                  "themeState": Object {
                    "disabled": false,
                  },
                }
              }
            >
              ¥
            </ForwardRef(ResultForward)>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "borderBottomLeftRadius": "0.4rem",
              "borderBottomRightRadius": "0.4rem",
              "borderTopLeftRadius": "0.4rem",
              "borderTopRightRadius": "0.4rem",
              "color": "#363B40",
              "fontSize": "1.4rem",
              "paddingBottom": "0rem",
              "paddingLeft": "0.6rem",
              "paddingRight": "1.2rem",
              "paddingTop": "0rem",
            }
          }
          type="text"
          value=""
        />
        <i
          className="lugia-icon-reminder_close   c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#9EA4AE",
              "fontSize": "1.2rem",
            }
          }
        />
      </div>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
          style={Object {}}
        >
          <div
            className="c9"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "backgroundColor": "#363B40",
                "borderBottomLeftRadius": "0.2rem",
                "borderBottomRightRadius": "0.2rem",
                "borderTopLeftRadius": "0.2rem",
                "borderTopRightRadius": "0.2rem",
                "opacity": 0,
              }
            }
          >
            <div
              className="c10"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={Object {}}
            />
            <div
              className="c11"
              style={
                Object {
                  "color": "#ffffff",
                }
              }
            >
              <span
                className=""
                onClick={[Function]}
                style={Object {}}
              >
                
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <p>
      large size
    </p>
    <div
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "backgroundColor": "#f4f5f8",
            "borderBottomColor": "#ebecf0",
            "borderBottomLeftRadius": "0.4rem",
            "borderBottomRightRadius": "0.4rem",
            "borderBottomStyle": "solid",
            "borderBottomWidth": "0.1rem",
            "borderLeftColor": "#ebecf0",
            "borderLeftStyle": "solid",
            "borderLeftWidth": "0.1rem",
            "borderRightColor": "#ebecf0",
            "borderRightStyle": "solid",
            "borderRightWidth": "0.1rem",
            "borderTopColor": "#ebecf0",
            "borderTopLeftRadius": "0.4rem",
            "borderTopRightRadius": "0.4rem",
            "borderTopStyle": "solid",
            "borderTopWidth": "0.1rem",
            "height": "4rem",
          }
        }
      >
        <span
          className="c3"
          style={
            Object {
              "color": "#d0d3da",
              "fontSize": "1.4rem",
            }
          }
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c4"
          disabled={true}
          maxLength="16"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          placeholder=""
          prefix={
            <ForwardRef(ResultForward)
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {
                    "size": "large",
                  },
                  "themeConfig": Object {
                    "__partName": "AmountInputPrefix",
                  },
                  "themeState": Object {
                    "disabled": true,
                  },
                }
              }
            >
              ¥
            </ForwardRef(ResultForward)>
          }
          readOnly={false}
          size="large"
          style={
            Object {
              "backgroundColor": "#f4f5f8",
              "borderBottomLeftRadius": "0.4rem",
              "borderBottomRightRadius": "0.4rem",
              "borderTopLeftRadius": "0.4rem",
              "borderTopRightRadius": "0.4rem",
              "color": "#d0d3da",
              "cursor": "not-allowed",
              "fontSize": "1.4rem",
              "paddingBottom": "0rem",
              "paddingLeft": "0.6rem",
              "paddingRight": "1.2rem",
              "paddingTop": "0rem",
            }
          }
          type="text"
          value=""
        />
        <i
          className="lugia-icon-reminder_close   c5"
          disabled={true}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#d0d3da",
              "cursor": "not-allowed",
              "fontSize": "1.2rem",
            }
          }
        />
      </div>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
          style={Object {}}
        >
          <div
            className="c9"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "backgroundColor": "#363B40",
                "borderBottomLeftRadius": "0.2rem",
                "borderBottomRightRadius": "0.2rem",
                "borderTopLeftRadius": "0.2rem",
                "borderTopRightRadius": "0.2rem",
                "opacity": 0,
              }
            }
          >
            <div
              className="c10"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={Object {}}
            />
            <div
              className="c11"
              style={
                Object {
                  "color": "#ffffff",
                }
              }
            >
              <span
                className=""
                onClick={[Function]}
                style={Object {}}
              >
                
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <p>
      受限Input
    </p>
    <div
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderBottomColor": "#d0d3da",
            "borderBottomLeftRadius": "0.4rem",
            "borderBottomRightRadius": "0.4rem",
            "borderBottomStyle": "solid",
            "borderBottomWidth": "0.1rem",
            "borderLeftColor": "#d0d3da",
            "borderLeftStyle": "solid",
            "borderLeftWidth": "0.1rem",
            "borderRightColor": "#d0d3da",
            "borderRightStyle": "solid",
            "borderRightWidth": "0.1rem",
            "borderTopColor": "#d0d3da",
            "borderTopLeftRadius": "0.4rem",
            "borderTopRightRadius": "0.4rem",
            "borderTopStyle": "solid",
            "borderTopWidth": "0.1rem",
            "height": "3.2rem",
          }
        }
      >
        <span
          className="c3"
          style={
            Object {
              "fontSize": "1.4rem",
            }
          }
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c4"
          disabled={false}
          maxLength="16"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          prefix={
            <ForwardRef(ResultForward)
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {
                    "size": "default",
                  },
                  "themeConfig": Object {
                    "__partName": "AmountInputPrefix",
                  },
                  "themeState": Object {
                    "disabled": false,
                  },
                }
              }
            >
              ¥
            </ForwardRef(ResultForward)>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "borderBottomLeftRadius": "0.4rem",
              "borderBottomRightRadius": "0.4rem",
              "borderTopLeftRadius": "0.4rem",
              "borderTopRightRadius": "0.4rem",
              "color": "#363B40",
              "fontSize": "1.4rem",
              "paddingBottom": "0rem",
              "paddingLeft": "0.6rem",
              "paddingRight": "1.2rem",
              "paddingTop": "0rem",
            }
          }
          type="text"
          value=""
        />
        <i
          className="lugia-icon-reminder_close   c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#9EA4AE",
              "fontSize": "1.2rem",
            }
          }
        />
      </div>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
          style={Object {}}
        >
          <div
            className="c9"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "backgroundColor": "#363B40",
                "borderBottomLeftRadius": "0.2rem",
                "borderBottomRightRadius": "0.2rem",
                "borderTopLeftRadius": "0.2rem",
                "borderTopRightRadius": "0.2rem",
                "opacity": 0,
              }
            }
          >
            <div
              className="c10"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={Object {}}
            />
            <div
              className="c11"
              style={
                Object {
                  "color": "#ffffff",
                }
              }
            >
              <span
                className=""
                onClick={[Function]}
                style={Object {}}
              >
                
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <p>
      有默认值的 受限Input
    </p>
    <div
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderBottomColor": "#d0d3da",
            "borderBottomLeftRadius": "0.4rem",
            "borderBottomRightRadius": "0.4rem",
            "borderBottomStyle": "solid",
            "borderBottomWidth": "0.1rem",
            "borderLeftColor": "#d0d3da",
            "borderLeftStyle": "solid",
            "borderLeftWidth": "0.1rem",
            "borderRightColor": "#d0d3da",
            "borderRightStyle": "solid",
            "borderRightWidth": "0.1rem",
            "borderTopColor": "#d0d3da",
            "borderTopLeftRadius": "0.4rem",
            "borderTopRightRadius": "0.4rem",
            "borderTopStyle": "solid",
            "borderTopWidth": "0.1rem",
            "height": "3.2rem",
          }
        }
      >
        <span
          className="c3"
          style={
            Object {
              "fontSize": "1.4rem",
            }
          }
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c4"
          disabled={false}
          maxLength="16"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          prefix={
            <ForwardRef(ResultForward)
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {
                    "size": "default",
                  },
                  "themeConfig": Object {
                    "__partName": "AmountInputPrefix",
                  },
                  "themeState": Object {
                    "disabled": false,
                  },
                }
              }
            >
              ¥
            </ForwardRef(ResultForward)>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "borderBottomLeftRadius": "0.4rem",
              "borderBottomRightRadius": "0.4rem",
              "borderTopLeftRadius": "0.4rem",
              "borderTopRightRadius": "0.4rem",
              "color": "#363B40",
              "fontSize": "1.4rem",
              "paddingBottom": "0rem",
              "paddingLeft": "0.6rem",
              "paddingRight": "1.2rem",
              "paddingTop": "0rem",
            }
          }
          type="text"
          value="123,456"
        />
        <i
          className="lugia-icon-reminder_close   c13"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#9EA4AE",
              "fontSize": "1.2rem",
            }
          }
        />
      </div>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
          style={Object {}}
        >
          <div
            className="c9"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "backgroundColor": "#363B40",
                "borderBottomLeftRadius": "0.2rem",
                "borderBottomRightRadius": "0.2rem",
                "borderTopLeftRadius": "0.2rem",
                "borderTopRightRadius": "0.2rem",
                "opacity": 1,
              }
            }
          >
            <div
              className="c10"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={Object {}}
            />
            <div
              className="c11"
              style={
                Object {
                  "color": "#ffffff",
                }
              }
            >
              <span
                className=""
                onClick={[Function]}
                style={Object {}}
              >
                壹拾贰万叁仟肆佰伍拾陆元整
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <p>
      主动聚焦的 Input
    </p>
    <div>
      <button
        onClick={[Function]}
      >
        点击主动聚焦
      </button>
      <div
        className="c1"
        onBlur={[Function]}
        onFocus={[Function]}
        style={Object {}}
      >
        <div
          className="c2"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "borderBottomColor": "#d0d3da",
              "borderBottomLeftRadius": "0.4rem",
              "borderBottomRightRadius": "0.4rem",
              "borderBottomStyle": "solid",
              "borderBottomWidth": "0.1rem",
              "borderLeftColor": "#d0d3da",
              "borderLeftStyle": "solid",
              "borderLeftWidth": "0.1rem",
              "borderRightColor": "#d0d3da",
              "borderRightStyle": "solid",
              "borderRightWidth": "0.1rem",
              "borderTopColor": "#d0d3da",
              "borderTopLeftRadius": "0.4rem",
              "borderTopRightRadius": "0.4rem",
              "borderTopStyle": "solid",
              "borderTopWidth": "0.1rem",
              "height": "3.2rem",
            }
          }
        >
          <span
            className="c3"
            style={
              Object {
                "fontSize": "1.4rem",
              }
            }
          >
            <span
              className=""
              style={Object {}}
            >
              ¥
            </span>
          </span>
          <input
            autoFocus={false}
            className="c4"
            disabled={false}
            maxLength="16"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            prefix={
              <ForwardRef(ResultForward)
                themeProps={
                  Object {
                    "onLugia": [Function],
                    "propsConfig": Object {
                      "size": "default",
                    },
                    "themeConfig": Object {
                      "__partName": "AmountInputPrefix",
                    },
                    "themeState": Object {
                      "disabled": false,
                    },
                  }
                }
              >
                ¥
              </ForwardRef(ResultForward)>
            }
            readOnly={false}
            size="default"
            style={
              Object {
                "borderBottomLeftRadius": "0.4rem",
                "borderBottomRightRadius": "0.4rem",
                "borderTopLeftRadius": "0.4rem",
                "borderTopRightRadius": "0.4rem",
                "color": "#363B40",
                "fontSize": "1.4rem",
                "paddingBottom": "0rem",
                "paddingLeft": "0.6rem",
                "paddingRight": "1.2rem",
                "paddingTop": "0rem",
              }
            }
            type="text"
            value=""
          />
          <i
            className="lugia-icon-reminder_close   c5"
            disabled={false}
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "color": "#9EA4AE",
                "fontSize": "1.2rem",
              }
            }
          />
        </div>
      </div>
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <div
            className="c8"
            style={Object {}}
          >
            <div
              className="c9"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={
                Object {
                  "backgroundColor": "#363B40",
                  "borderBottomLeftRadius": "0.2rem",
                  "borderBottomRightRadius": "0.2rem",
                  "borderTopLeftRadius": "0.2rem",
                  "borderTopRightRadius": "0.2rem",
                  "opacity": 0,
                }
              }
            >
              <div
                className="c10"
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                style={Object {}}
              />
              <div
                className="c11"
                style={
                  Object {
                    "color": "#ffffff",
                  }
                }
              >
                <span
                  className=""
                  onClick={[Function]}
                  style={Object {}}
                >
                  
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <p>
      amountPrefix: '¥' transform: false 
    </p>
    <div
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderBottomColor": "#d0d3da",
            "borderBottomLeftRadius": "0.4rem",
            "borderBottomRightRadius": "0.4rem",
            "borderBottomStyle": "solid",
            "borderBottomWidth": "0.1rem",
            "borderLeftColor": "#d0d3da",
            "borderLeftStyle": "solid",
            "borderLeftWidth": "0.1rem",
            "borderRightColor": "#d0d3da",
            "borderRightStyle": "solid",
            "borderRightWidth": "0.1rem",
            "borderTopColor": "#d0d3da",
            "borderTopLeftRadius": "0.4rem",
            "borderTopRightRadius": "0.4rem",
            "borderTopStyle": "solid",
            "borderTopWidth": "0.1rem",
            "height": "3.2rem",
          }
        }
      >
        <span
          className="c3"
          style={
            Object {
              "fontSize": "1.4rem",
            }
          }
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c4"
          disabled={false}
          maxLength="16"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          prefix={
            <ForwardRef(ResultForward)
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {
                    "size": "default",
                  },
                  "themeConfig": Object {
                    "__partName": "AmountInputPrefix",
                  },
                  "themeState": Object {
                    "disabled": false,
                  },
                }
              }
            >
              ¥
            </ForwardRef(ResultForward)>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "borderBottomLeftRadius": "0.4rem",
              "borderBottomRightRadius": "0.4rem",
              "borderTopLeftRadius": "0.4rem",
              "borderTopRightRadius": "0.4rem",
              "color": "#363B40",
              "fontSize": "1.4rem",
              "paddingBottom": "0rem",
              "paddingLeft": "0.6rem",
              "paddingRight": "1.2rem",
              "paddingTop": "0rem",
            }
          }
          type="text"
          value=""
        />
        <i
          className="lugia-icon-reminder_close   c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#9EA4AE",
              "fontSize": "1.2rem",
            }
          }
        />
      </div>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
          style={Object {}}
        >
          <div
            className="c9"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "backgroundColor": "#363B40",
                "borderBottomLeftRadius": "0.2rem",
                "borderBottomRightRadius": "0.2rem",
                "borderTopLeftRadius": "0.2rem",
                "borderTopRightRadius": "0.2rem",
                "opacity": 0,
              }
            }
          >
            <div
              className="c10"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={Object {}}
            />
            <div
              className="c11"
              style={
                Object {
                  "color": "#ffffff",
                }
              }
            >
              <span
                className=""
                style={Object {}}
              >
                
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <p>
      amountPrefix: '$' transform: false 
    </p>
    <div
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "borderBottomColor": "#d0d3da",
            "borderBottomLeftRadius": "0.4rem",
            "borderBottomRightRadius": "0.4rem",
            "borderBottomStyle": "solid",
            "borderBottomWidth": "0.1rem",
            "borderLeftColor": "#d0d3da",
            "borderLeftStyle": "solid",
            "borderLeftWidth": "0.1rem",
            "borderRightColor": "#d0d3da",
            "borderRightStyle": "solid",
            "borderRightWidth": "0.1rem",
            "borderTopColor": "#d0d3da",
            "borderTopLeftRadius": "0.4rem",
            "borderTopRightRadius": "0.4rem",
            "borderTopStyle": "solid",
            "borderTopWidth": "0.1rem",
            "height": "3.2rem",
          }
        }
      >
        <span
          className="c3"
          style={
            Object {
              "fontSize": "1.4rem",
            }
          }
        >
          <span
            className=""
            style={Object {}}
          >
            $
          </span>
        </span>
        <input
          autoFocus={false}
          className="c4"
          disabled={false}
          maxLength="16"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          prefix={
            <ForwardRef(ResultForward)
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {
                    "size": "default",
                  },
                  "themeConfig": Object {
                    "__partName": "AmountInputPrefix",
                  },
                  "themeState": Object {
                    "disabled": false,
                  },
                }
              }
            >
              $
            </ForwardRef(ResultForward)>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "borderBottomLeftRadius": "0.4rem",
              "borderBottomRightRadius": "0.4rem",
              "borderTopLeftRadius": "0.4rem",
              "borderTopRightRadius": "0.4rem",
              "color": "#363B40",
              "fontSize": "1.4rem",
              "paddingBottom": "0rem",
              "paddingLeft": "0.6rem",
              "paddingRight": "1.2rem",
              "paddingTop": "0rem",
            }
          }
          type="text"
          value=""
        />
        <i
          className="lugia-icon-reminder_close   c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#9EA4AE",
              "fontSize": "1.2rem",
            }
          }
        />
      </div>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
          style={Object {}}
        >
          <div
            className="c9"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "backgroundColor": "#363B40",
                "borderBottomLeftRadius": "0.2rem",
                "borderBottomRightRadius": "0.2rem",
                "borderTopLeftRadius": "0.2rem",
                "borderTopRightRadius": "0.2rem",
                "opacity": 0,
              }
            }
          >
            <div
              className="c10"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              style={Object {}}
            />
            <div
              className="c11"
              style={
                Object {
                  "color": "#ffffff",
                }
              }
            >
              <span
                className=""
                style={Object {}}
              >
                $
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AmountInputDemo props: placeholder  1`] = `
Array [
  .c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  visibility: hidden;
  padding-right: 1.2rem;
}

.c0 {
  display: inline-block;
  height: 100%;
  display: block;
}

.c3 {
  background-color: transparent;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  border: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: text;
}

.c3::-webkit-input-placeholder {
  color: #c2c5ce;
  font-size: 1.4rem;
}

.c3::-moz-placeholder {
  color: #c2c5ce;
  font-size: 1.4rem;
}

.c3:-ms-input-placeholder {
  color: #c2c5ce;
  font-size: 1.4rem;
}

.c3::placeholder {
  color: #c2c5ce;
  font-size: 1.4rem;
}

.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  min-width: 3rem;
  width: 100%;
  background-color: white;
}

.c2 {
  height: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #363B40;
  padding-top: 0rem;
  padding-bottom: 0rem;
  padding-left: 1.2rem;
  padding-right: 0rem;
}

<div
    className="c0"
    onBlur={[Function]}
    onFocus={[Function]}
    style={Object {}}
  >
    <div
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "borderBottomColor": "#d0d3da",
          "borderBottomLeftRadius": "0.4rem",
          "borderBottomRightRadius": "0.4rem",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "0.1rem",
          "borderLeftColor": "#d0d3da",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "0.1rem",
          "borderRightColor": "#d0d3da",
          "borderRightStyle": "solid",
          "borderRightWidth": "0.1rem",
          "borderTopColor": "#d0d3da",
          "borderTopLeftRadius": "0.4rem",
          "borderTopRightRadius": "0.4rem",
          "borderTopStyle": "solid",
          "borderTopWidth": "0.1rem",
          "height": "3.2rem",
        }
      }
    >
      <span
        className="c2"
        style={
          Object {
            "fontSize": "1.4rem",
          }
        }
      >
        <span
          className=""
          style={Object {}}
        >
          ¥
        </span>
      </span>
      <input
        autoFocus={false}
        className="c3"
        disabled={false}
        maxLength="16"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        placeholder="请填写内容"
        prefix={
          <ForwardRef(ResultForward)
            themeProps={
              Object {
                "onLugia": [Function],
                "propsConfig": Object {
                  "size": "default",
                },
                "themeConfig": Object {
                  "__partName": "AmountInputPrefix",
                },
                "themeState": Object {
                  "disabled": false,
                },
              }
            }
          >
            ¥
          </ForwardRef(ResultForward)>
        }
        readOnly={false}
        size="default"
        style={
          Object {
            "borderBottomLeftRadius": "0.4rem",
            "borderBottomRightRadius": "0.4rem",
            "borderTopLeftRadius": "0.4rem",
            "borderTopRightRadius": "0.4rem",
            "color": "#363B40",
            "fontSize": "1.4rem",
            "paddingBottom": "0rem",
            "paddingLeft": "0.6rem",
            "paddingRight": "1.2rem",
            "paddingTop": "0rem",
          }
        }
        type="text"
        value=""
      />
      <i
        className="lugia-icon-reminder_close   c4"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "color": "#9EA4AE",
            "fontSize": "1.2rem",
          }
        }
      />
    </div>
  </div>,
  .c0 {
  display: none;
}

.c1 {
  position: absolute;
  border-radius: 4px;
  box-sizing: border-box;
  left: -9999px;
  top: -9999px;
  z-index: undefined;
}

.c2 {
  position: relative;
  padding-bottom: 0.4rem;
  background: transparent;
  box-shadow: none;
}

.c3 {
  position: relative;
  box-sizing: border-box;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
  padding-left: 0.8rem;
  padding-right: 0.8rem;
}

.c4 {
  border-color: transparent;
  position: absolute;
  border-style: solid;
  line-height: 1;
  left: 1rem;
  bottom: -0.3rem;
  border-top-color: #363B40;
  border-width: 0.5rem 0.5rem 0;
}

.c5 {
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  overflow: hidden;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  font-size: 1.2rem;
  color: #ffffff;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        style={Object {}}
      >
        <div
          className="c3"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "backgroundColor": "#363B40",
              "borderBottomLeftRadius": "0.2rem",
              "borderBottomRightRadius": "0.2rem",
              "borderTopLeftRadius": "0.2rem",
              "borderTopRightRadius": "0.2rem",
              "opacity": 0,
            }
          }
        >
          <div
            className="c4"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={Object {}}
          />
          <div
            className="c5"
            style={
              Object {
                "color": "#ffffff",
              }
            }
          >
            <span
              className=""
              onClick={[Function]}
              style={Object {}}
            >
              
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`AmountInputDemo props: placeholder  2`] = `
Array [
  .c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  visibility: hidden;
  padding-right: 1.2rem;
}

.c0 {
  display: inline-block;
  height: 100%;
  display: block;
}

.c3 {
  background-color: transparent;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  border: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: text;
}

.c3::-webkit-input-placeholder {
  color: #c2c5ce;
  font-size: 1.4rem;
}

.c3::-moz-placeholder {
  color: #c2c5ce;
  font-size: 1.4rem;
}

.c3:-ms-input-placeholder {
  color: #c2c5ce;
  font-size: 1.4rem;
}

.c3::placeholder {
  color: #c2c5ce;
  font-size: 1.4rem;
}

.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  min-width: 3rem;
  width: 100%;
  background-color: white;
}

.c2 {
  height: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #363B40;
  padding-top: 0rem;
  padding-bottom: 0rem;
  padding-left: 1.2rem;
  padding-right: 0rem;
}

<div
    className="c0"
    onBlur={[Function]}
    onFocus={[Function]}
    style={Object {}}
  >
    <div
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "borderBottomColor": "#d0d3da",
          "borderBottomLeftRadius": "0.4rem",
          "borderBottomRightRadius": "0.4rem",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "0.1rem",
          "borderLeftColor": "#d0d3da",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "0.1rem",
          "borderRightColor": "#d0d3da",
          "borderRightStyle": "solid",
          "borderRightWidth": "0.1rem",
          "borderTopColor": "#d0d3da",
          "borderTopLeftRadius": "0.4rem",
          "borderTopRightRadius": "0.4rem",
          "borderTopStyle": "solid",
          "borderTopWidth": "0.1rem",
          "height": "3.2rem",
        }
      }
    >
      <span
        className="c2"
        style={
          Object {
            "fontSize": "1.4rem",
          }
        }
      >
        <span
          className=""
          style={Object {}}
        >
          ¥
        </span>
      </span>
      <input
        autoFocus={false}
        className="c3"
        disabled={false}
        maxLength="16"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        placeholder=""
        prefix={
          <ForwardRef(ResultForward)
            themeProps={
              Object {
                "onLugia": [Function],
                "propsConfig": Object {
                  "size": "default",
                },
                "themeConfig": Object {
                  "__partName": "AmountInputPrefix",
                },
                "themeState": Object {
                  "disabled": false,
                },
              }
            }
          >
            ¥
          </ForwardRef(ResultForward)>
        }
        readOnly={false}
        size="default"
        style={
          Object {
            "borderBottomLeftRadius": "0.4rem",
            "borderBottomRightRadius": "0.4rem",
            "borderTopLeftRadius": "0.4rem",
            "borderTopRightRadius": "0.4rem",
            "color": "#363B40",
            "fontSize": "1.4rem",
            "paddingBottom": "0rem",
            "paddingLeft": "0.6rem",
            "paddingRight": "1.2rem",
            "paddingTop": "0rem",
          }
        }
        type="text"
        value=""
      />
      <i
        className="lugia-icon-reminder_close   c4"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "color": "#9EA4AE",
            "fontSize": "1.2rem",
          }
        }
      />
    </div>
  </div>,
  .c0 {
  display: none;
}

.c1 {
  position: absolute;
  border-radius: 4px;
  box-sizing: border-box;
  left: -9999px;
  top: -9999px;
  z-index: undefined;
}

.c2 {
  position: relative;
  padding-bottom: 0.4rem;
  background: transparent;
  box-shadow: none;
}

.c3 {
  position: relative;
  box-sizing: border-box;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
  padding-left: 0.8rem;
  padding-right: 0.8rem;
}

.c4 {
  border-color: transparent;
  position: absolute;
  border-style: solid;
  line-height: 1;
  left: 1rem;
  bottom: -0.3rem;
  border-top-color: #363B40;
  border-width: 0.5rem 0.5rem 0;
}

.c5 {
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  overflow: hidden;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  font-size: 1.2rem;
  color: #ffffff;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        style={Object {}}
      >
        <div
          className="c3"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "backgroundColor": "#363B40",
              "borderBottomLeftRadius": "0.2rem",
              "borderBottomRightRadius": "0.2rem",
              "borderTopLeftRadius": "0.2rem",
              "borderTopRightRadius": "0.2rem",
              "opacity": 0,
            }
          }
        >
          <div
            className="c4"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={Object {}}
          />
          <div
            className="c5"
            style={
              Object {
                "color": "#ffffff",
              }
            }
          >
            <span
              className=""
              onClick={[Function]}
              style={Object {}}
            >
              
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
